--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     width: var(--size);
     aspect-ratio: 2 / 1;
     border-radius: 50% / 100% 100% 0 0;
-    position: relative;
+    justify-content: center;
+    align-items: center;
     display: none;
     overflow: hidden;
-    align-items: flex-end;
-    justify-content: center;
     font-size: calc(var(--size) / 6);
     color: var(--text-color);
     margin-top: 0;
