--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
     margin: 0;
     display: grid;
     place-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-family: 'Roboto', sans-serif;
     height: 100vh;
     background: linear-gradient(to right, #83a4d4, #b6fbff);
