--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     width: var(--size);
     aspect-ratio: 2 / 1;
     border-radius: 50% / 100% 100% 0 0;
-    justify-content: center;
-    align-items: center;
+    position: relative;
     display: none;
     overflow: hidden;
+    align-items: flex-end;
+    justify-content: center;
     font-size: calc(var(--size) / 6);
     color: var(--text-color);
     margin-top: 0;
@@ -82,10 +83,6 @@
     margin: 0;
     display: grid;
     place-items: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     font-family: 'Roboto', sans-serif;
     height: 100vh;
     background: linear-gradient(to right, #83a4d4, #b6fbff);
@@ -110,13 +107,6 @@
           transform: rotate(360deg);
       }
   }
-
-    .inputNumber {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 16px;
-    }
   
   .loading-style {
       justify-content: center;
@@ -151,8 +141,6 @@
     <div id="available-points">Dépenses disponibles CHF</div>
     <div id="loadingScreen" class="loading-style"></div>
     <div id="progressbar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="--value: 0; --secondary: #adf; --progress-value: 1000;"></div>
-    <input type="number" id="inputNumber" placeholder="10" />
-
   </div>
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
     <a href="https://www.facebook.com" target="_blank" style="margin: 0 10px; color: #4373b9;"><i class="fab fa-facebook-f"></i></a>
