--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
   [role="progressbar"]::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: 25%;
     bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
     background: conic-gradient(
       from 0.75turn at 50% 100%, 
       var(--bar-gradient-start) calc(var(--percentage) * 1% / 2), 
