--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
   [role="progressbar"]::before {
     content: "";
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
+    top: 25%;
+    left: 25%;
     width: 100%;
     height: 100%;
     background: conic-gradient(
