--- a/index.html
+++ b/index.html
@@ -24,24 +24,20 @@
   }
 
   [role="progressbar"] {
-      --size: 180px;
-      --text-color: #4373b9; /* Blue color for the text */
-      animation: progress 2s 0.5s forwards;
-      width: var(--size);
-      aspect-ratio: 2 / 1;
-      border-radius: 50% / 100% 100% 0 0;
-      position: relative;
-      display: none;
-      overflow: hidden;
-      align-items: center; /* Updated line to center vertically */
-      justify-content: center;
-      font-size: calc(var(--size) / 6);
-      color: var(--text-color);
-      margin-top: 0;
-      position: absolute;
-      top: 60%; /* Center vertically */
-      left: 50%; /* Center horizontally */
-      transform: translate(-50%, -50%); /* Center the element */
+    --size: 300px;
+    --text-color: #4373b9; /* Blue color for the text */
+    animation: progress 2s 0.5s forwards;
+    width: var(--size);
+    aspect-ratio: 2 / 1;
+    border-radius: 50% / 100% 100% 0 0;
+    position: relative;
+    display: none;
+    overflow: hidden;
+    align-items: flex-end;
+    justify-content: center;
+    font-size: calc(var(--size) / 6);
+    color: var(--text-color);
+    margin-top: 0;
   }
 
   #available-points {
@@ -49,7 +45,6 @@
     display: none;
     font-size: 26px;
     margin-bottom: 25px;
-    top: 30%; /* Center vertically */
     box-sizing: border-box;
     background: linear-gradient(to right, #236a82, #4373b9); /* Light blue to dark blue gradient */
     -webkit-background-clip: text;
@@ -59,8 +54,9 @@
   [role="progressbar"]::before {
     content: "";
     position: absolute;
-    top: 25%;
-    left: 25%;
+    top: 0;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background: conic-gradient(
@@ -69,9 +65,9 @@
       var(--bar-gradient-end) calc(var(--percentage) * 1% / 2),
       var(--secondary) 0
     );
-    mask: radial-gradient(at 50% 100%, white 30%, transparent 60.5%); /* Increase 55% to 60% for thicker bar */
+    mask: radial-gradient(at 50% 100%, white 55%, transparent 55.5%);
     mask-mode: alpha;
-    -webkit-mask: radial-gradient(at 50% 100%, #0000 30%, #000 60.5%); /* Same adjustment for WebKit browsers */
+    -webkit-mask: radial-gradient(at 50% 100%, #0000 55%, #000 55.5%);
     -webkit-mask-mode: alpha;
   }
 
