--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     position: relative;
     display: none;
     overflow: hidden;
-    align-items: center; /* Updated line to center vertically */
-    justify-content: center;
+    align-items: center; /* Updated line to center vertically justify-content: center; */
     font-size: calc(var(--size) / 6);
     color: var(--text-color);
     margin-top: 25px; /* Adjust the margin to create space below the text */
