--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     position: relative;
     display: none;
     overflow: hidden;
-    align-items: flex-end; /* Updated line to center vertically  */
-    justify-content: center;
+    align-items: center; /* Updated line to center vertically  */
+    flex-direction: column;
+    justify-content: flex-end;
     font-size: calc(var(--size) / 6);
     color: var(--text-color);
     margin-top: 25px; /* Adjust the margin to create space below the text */
