--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   [role="progressbar"]::before {
     content: "";
     position: absolute;
+    padding-top:20px;
     top: 0;
     bottom: 0;
     left: 0;
