--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ input[type="input-points"]:focus {
     loadingScreen.style.display = 'none';
     const availablePoints = document.getElementById('available-points');
     availablePoints.style.display = 'flex';
-    const availablePoints = document.getElementById('input-points');
-    availablePoints.style.display = 'flex';
+    const inputPoints = document.getElementById('input-points');
+    inputPoints.style.display = 'flex';
     const progressBar = document.getElementById('progressbar');
     progressBar.style.display = 'flex'; // Change to 'flex' or 'block' based on your styling
   }
