--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
     padding: 12px 15px; /* Larger padding for easier interaction */
     border: 1px solid #ccc; /* Subtle border */
     border-radius: 6px; /* Smoothed corners */
-    justify-content: center;
     display: none;
+    justify-content: center;
+    display: felx;
     align-items: center;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1); /* Gentle shadow */
     font-size: 18px; /* Larger font size for readability */
@@ -172,6 +173,7 @@ input[id="input-points"]:focus {
     <br>
     <div id="loadingScreen" class="loading-style"></div>
     <div id="progressbar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="--value: 0; --secondary: #adf; --progress-value: 1000;"></div>
+    <br>
     <input id="input-points" name="quantity" min="1" max="100"></input>
   </div>
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
