--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     border-radius: 6px; /* Smoothed corners */
     display: none;
     justify-content: center;
+    flex-direction: column;
     display: felx;
     align-items: center;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1); /* Gentle shadow */
