--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     margin: 0;
     display: grid;
     place-items: center;
+    justify-content: center;
     font-family: 'Roboto', sans-serif;
     height: 100vh;
     background: linear-gradient(to right, #83a4d4, #b6fbff);
@@ -115,7 +116,7 @@
   
   .loading-style {
       justify-content: center;
-      display: felx;
+      display: flex;
       align-items: center;
       top: 50%;
       left: 50%;
@@ -141,8 +142,8 @@
     border-radius: 6px; /* Smoothed corners */
     display: none;
     justify-content: center;
+    text-align: center;
     flex-direction: column;
-    display: felx;
     align-items: center;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1); /* Gentle shadow */
     font-size: 18px; /* Larger font size for readability */
