--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ input[id="input-points"]:focus {
     <div id="loadingScreen" class="loading-style"></div>
     <div id="progressbar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="--value: 0; --secondary: #adf; --progress-value: 1000;"></div>
     <br>
-    <div>
+    <div class="input-points">
       <input id="input-points" name="quantity" min="1" max="100"></input>
     </div>
   </div>
