--- a/index.html
+++ b/index.html
@@ -161,6 +161,13 @@ input[id="input-points"]:focus {
     box-shadow: 0 0 8px rgba(66, 133, 244, 0.3); /* Enhanced focus shadow */
 }
 
+.flex-container {
+    display: flex;
+    justify-content: center; /* Horizontal centering */
+    align-items: center; /* Vertical centering */
+}
+
+
 </style>
 </head>
 <body>
@@ -170,14 +177,13 @@ input[id="input-points"]:focus {
       <img src="logo.png" alt="Task Force Event Logistique Logo">
     </a>
   </header>
-  <div>
+  <div class="flex-container">
     <div id="available-points">Dépenses disponibles CHF</div>
     <br>
     <div id="loadingScreen" class="loading-style"></div>
     <div id="progressbar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="--value: 0; --secondary: #adf; --progress-value: 1000;"></div>
-    <br>
-    <div class="input-points">
-      <input id="input-points" name="quantity" min="1" max="100"></input>
+    <div class="flex-container">
+      <input id="input-points" name="quantity" min="1" max="100">
     </div>
   </div>
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
