--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ input[id="input-points"]:focus {
     display: flex;
     justify-content: center; /* Horizontal centering */
     align-items: center; /* Vertical centering */
+    flex-direction: column;
 }
 
 
