--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
   
   .loading-style {
       justify-content: center;
+      flex-direction: column;
       display: flex;
       align-items: center;
       top: 50%;
