--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     text-align: center;
     display: none;
     font-size: 20px;
+    margin-top: 25px;
+    margin-bottom:25px;
     box-sizing: border-box;
     background: linear-gradient(to right, #236a82, #4373b9); /* Light blue to dark blue gradient */
     -webkit-background-clip: text;
