--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ input[id="input-points"]:focus {
     <br>
     <br>
     <div class="flex-container" style="padding-top:25px;">
-      <div id="available-points">Dépenses disponibles CHF</div>
+      <div>Dépenses disponibles CHF</div>
       <input id="input-points" name="quantity" min="1" max="10000">
     </div>
   </div>
