--- a/index.html
+++ b/index.html
@@ -183,13 +183,11 @@ input[id="input-points"]:focus {
   </header>
   <div class="flex-container">
     <div id="loadingScreen" class="loading-style"></div>
-    <div class="flex-container">
+    <div class="flex-container" style="padding-bottom:25px">
       <div id="progressbar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="--value: 0; --secondary: #adf; --progress-value: 1000;"></div>
     </div>
-    <br>
-    <br>
     <div class="flex-container" style="padding-top:25px;">
-      <div>Dépenses disponibles CHF</div>
+      <div id="available-points">Dépenses disponibles CHF</div>
       <input id="input-points" name="quantity" min="1" max="10000">
     </div>
   </div>
