--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     margin-bottom:25px;
     display: flex;
     flex-direction: column;
-    box-sizing: border-box;
-    background: linear-gradient(to right, #236a82, #4373b9); /* Light blue to dark blue gradient */
+    
+    background: linear-gradient(to right, #236a82, #4373b9); /* Light blue to dark blue gradient box-sizing: border-box; */
     -webkit-background-clip: text;
     color: transparent;
   }
