--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@ input[id="input-points"]:focus {
     </div>
     <div class="flex-container" style="padding-top:25px;">
       <div id="available-points">Dépenses disponibles CHF</div>
+    </div>
+    <div class="flex-container" style="padding-top:25px;">
       <input id="input-points" name="quantity" min="1" max="10000">
     </div>
   </div>
