--- a/index.html
+++ b/index.html
@@ -169,6 +169,57 @@ input[id="input-points"]:focus {
     flex-direction: column;
 }
 
+      .button {
+        position: relative;
+        padding: 20px;
+        background-color: #4373b9;
+        display: none;
+        border-radius: 4em;
+        font-size: 16px;
+        color: white;
+        padding: 0.8em 1.8em;
+        cursor: pointer;
+        user-select: none;
+        text-align: center;
+        text-decoration: none;
+        cursor: pointer;
+        transition-duration: 0.4s;
+        -webkit-transition-duration: 0.4s;
+    }
+
+    .button:hover {
+        transition-duration: 0.1s;
+        background-color: #6699e3;
+    }
+
+    .button:after {
+        content: "";
+        display: block;
+        position: absolute;
+        border-radius: 4em;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: all 0.5s;
+        box-shadow: 0 0 10px 40px white;
+    }
+
+    .button:active:after {
+        box-shadow: 0 0 0 0 white;
+        position: absolute;
+        border-radius: 4em;
+        left: 0;
+        top: 0;
+        opacity: 1;
+        transition: 0s;
+    }
+
+    .button:active {
+        top: 1px;
+    }
+
 
 </style>
 </head>
@@ -189,6 +240,10 @@ input[id="input-points"]:focus {
     </div>
     <div class="flex-container" style="padding-top:18px;">
       <input id="input-points" name="quantity" min="1" max="10000">
+    </div>
+    <div class="flex-container>
+        <button class="button" type="button" id="subtract-button">Subtract</button>
+    </div>
     </div>
   </div>
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
@@ -267,6 +322,8 @@ input[id="input-points"]:focus {
     inputPoints.style.display = 'flex';
     const progressBar = document.getElementById('progressbar');
     progressBar.style.display = 'flex';
+    const subtractButton = document.getElementById("subtract-button");
+    subtractButton.style.display = 'flex';
   }
 
 
