--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ input[id="input-points"]:focus {
     <div class="flex-container" style="padding-top:18px;">
       <input id="input-points" name="quantity" min="1" max="10000">
     </div>
-    <div class="flex-container>
+    <div class="flex-container">
         <button class="button" type="button" id="subtract-button">Subtract</button>
     </div>
     </div>
