--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    display:block;
     background: conic-gradient(
       from 0.75turn at 50% 100%, 
       var(--bar-gradient-start) calc(var(--percentage) * 1% / 2), 
@@ -241,7 +242,7 @@ input[id="input-points"]:focus {
     <div class="flex-container" style="padding-top:18px;">
       <input id="input-points" name="quantity" min="1" max="10000">
     </div>
-    <div class="flex-container">
+    <div class="flex-container" style="padding-top:16px;">
         <button class="button" type="button" id="subtract-button">Subtract</button>
     </div>
     </div>
