--- a/index.html
+++ b/index.html
@@ -233,22 +233,17 @@ input[id="input-points"]:focus {
   </header>
   <div class="flex-container">
     
-    <div class="flex-container" style="padding-top:150px">
       <div id="progressbar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="--value: 0; --secondary: #adf; --progress-value: 1000;"></div>
-    </div>
-    <div class="flex-container" style="padding-top:25px;">
+
       <div id="available-points">Dépenses disponibles CHF</div>
-    </div>
-    <div class="flex-container" style="padding-top:25px;">
+
+
       <div id="loadingScreen" class="loading-style"></div>
-    </div>
-    <div class="flex-container" style="padding-top:18px;">
+
+
       <input id="input-points" name="quantity" min="1" max="10000">
-    </div>
-    <div class="flex-container" style="padding-top:16px;">
-        <button class="button" type="button" id="subtract-button">Subtract</button>
-    </div>
-    </div>
+
+      <button class="button" type="button" id="subtract-button">Subtract</button>
   </div>
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
     <a href="https://www.facebook.com" target="_blank" style="margin: 0 10px; color: #4373b9;"><i class="fab fa-facebook-f"></i></a>
@@ -319,7 +314,8 @@ input[id="input-points"]:focus {
 
   function showProgressBar() {
     const loadingScreen = document.getElementById('loadingScreen');
-    loadingScreen.style.display = 'none';
+    /*loadingScreen.style.display = 'none';*/
+    loadingScreen.remove();
     const availablePoints = document.getElementById('available-points');
     availablePoints.style.display = 'flex';
     const inputPoints = document.getElementById('input-points');
