--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     text-align: center;
     display: none;
     font-size: 20px;
-    flex-direction: column;    
+    flex-direction: column;
+    justify-content: center;
     background: linear-gradient(to right, #236a82, #4373b9); /* Light blue to dark blue gradient box-sizing: border-box; */
     -webkit-background-clip: text;
     color: transparent;
@@ -58,13 +59,14 @@
   [role="progressbar"]::before {
     content: "";
     position: absolute;
-    margin-bottom: 70px;
+    justify-content: center;
+    flex-direction: column;
     top: 0;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    display:block;
+    display: block;
     background: conic-gradient(
       from 0.75turn at 50% 100%, 
       var(--bar-gradient-start) calc(var(--percentage) * 1% / 2), 
