--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 [role="progressbar"] {
     --size: 100px;
     --text-color: #4373b9; /* Blue color for the text */
-    
+    align-items: center;
     animation: progress 2s 0.5s forwards;
     width: var(--size);
     aspect-ratio: 2 / 1;
