--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     justify-content: flex-end;
     font-size: calc(var(--size) / 5);
     color: var(--text-color);
-    left: 50%; /* Center horizontally */
-    transform: translate(-50%, -50%); /* Center the element */
+    left: 20%; /* Center horizontally */
+   /* Center the element  transform: translate(-50%, -50%);  */
 }
 
   #available-points {
