--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ input[id="input-points"]:focus {
   </header>
   <div class="flex-container">
     
-      <div id="progressbar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="--value: 0; --secondary: #adf; --progress-value: 1000;"></div>
+      <div id="progressbar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="--value: 0; --secondary: #adf; --progress-value: 1000; padding-bottom: 26px;"></div>
 
       <div id="available-points">Dépenses disponibles CHF</div>
 
