--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@ input[id="input-points"]:focus {
       </div>
       <div id="available-points" style="padding-bottom: 14px;">Points à déduire CHF</div>
       <div id="loadingScreen" class="loading-style"></div>
-      <input id="input-points" name="quantity" min="1" max="10000" style="padding-bottom: 14px;">
+      <div class="flex-container" style="padding-bottom: 14px;">
+        <input id="input-points" name="quantity" min="1" max="10000">
+      </div>
       <button class="button" type="button" id="subtract-button">Subtract</button>
   </div>
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
