--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <style>
   @keyframes progress {
     0% { --percentage: 0; }
@@ -239,7 +240,28 @@ input[id="input-points"]:focus {
       <div class="flex-container" style="padding-bottom: 14px;">
         <input id="input-points" name="quantity" min="1" max="10000">
       </div>
-      <button class="button" type="button" id="subtract-button">Subtract</button>
+      <button class="button" type="button" id="subtract-button" data-toggle="modal" data-target="#confirmationModal">Subtract</button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Do you want to proceed?</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-success" onclick="handleResponse(true)">Yes</button>
+              <button type="button" class="btn btn-danger" onclick="handleResponse(false)">No</button>
+            </div>
+          </div>
+        </div>
+      </div>
   </div>
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
     <a href="https://www.facebook.com" target="_blank" style="margin: 0 10px; color: #4373b9;"><i class="fab fa-facebook-f"></i></a>
@@ -247,6 +269,23 @@ input[id="input-points"]:focus {
     <a href="https://www.linkedin.com" target="_blank" style="margin: 0 10px; color: #4373b9;"><i class="fab fa-linkedin-in"></i></a>
     <p style="font-size: 10px; color: #4373b9; margin-top: 20px;">Powered by RushB!</p>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script>
+    function handleResponse(isYes) {
+      if (isYes) {
+        alert('You clicked Yes!');
+        // Add your "Yes" logic here
+      } else {
+        alert('You clicked No!');
+        // Add your "No" logic here
+      }
+
+      // Close the modal after handling the response
+      $('#confirmationModal').modal('hide');
+    }
+</script>
 </body>
 <script>
 
