--- a/index.html
+++ b/index.html
@@ -221,6 +221,23 @@ input[id="input-points"]:focus {
   .button:active {
       top: 1px;
 
+  /* Center the modal vertically and horizontally */
+  .modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .btn-success {
+    background-color: #2ecc71;
+    border-color: #2ecc71;
+  }
+
+  .btn-danger {
+    background-color: #e74c3c;
+    border-color: #e74c3c;
+  }
+
 
 </style>
 </head>
