--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ input[id="input-points"]:focus {
 
   /* Center the modal vertically and horizontally */
   .modal {
-    display: flex;
+    display: flex !important;
     align-items: center;
     justify-content: center;
   }
