--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@ input[id="input-points"]:focus {
     justify-content: center;
   }
 
+  .modal-dialog {
+    max-width: 60%;
+  }
+
   .btn-success {
     background-color: #2ecc71;
     border-color: #2ecc71;
@@ -259,27 +263,27 @@ input[id="input-points"]:focus {
       </div>
       <button class="button" type="button" id="subtract-button" data-toggle="modal" data-target="#confirmationModal">Subtract</button>
 
-      <!-- Modal -->
-      <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>Do you want to proceed?</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-success" onclick="handleResponse(true)">Yes</button>
-              <button type="button" class="btn btn-danger" onclick="handleResponse(false)">No</button>
-            </div>
+    <!-- Modal -->
+    <div class="modal fade" id="confirmationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Do you want to proceed?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success" onclick="handleResponse(true)">Yes</button>
+            <button type="button" class="btn btn-danger" onclick="handleResponse(false)">No</button>
           </div>
         </div>
       </div>
-  </div>
+    </div>
+
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
     <a href="https://www.facebook.com" target="_blank" style="margin: 0 10px; color: #4373b9;"><i class="fab fa-facebook-f"></i></a>
     <a href="https://www.instagram.com" target="_blank" style="margin: 0 10px; color: #4373b9;"><i class="fab fa-instagram"></i></a>
