--- a/index.html
+++ b/index.html
@@ -221,35 +221,6 @@ input[id="input-points"]:focus {
   .button:active {
       top: 1px;
 
-  .overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-  }
-
-  .modal {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 80%;
-    text-align: center;
-  }
-
-  .btn {
-    padding: 10px 20px;
-    margin-top: 20px;
-    cursor: pointer;
-    background-color: #3498db;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-  }
 
 </style>
 </head>
@@ -269,17 +240,8 @@ input[id="input-points"]:focus {
       <div class="flex-container" style="padding-bottom: 14px;">
         <input id="input-points" name="quantity" min="1" max="10000">
       </div>
-      <div class="flex-container" style="padding-bottom: 14px;">
-        <div class="overlay" id="modalOverlay">
-          <div class="modal">
-            <h2>Confirmation</h2>
-            <p>Do you want to proceed?</p>
-            <button class="btn" onclick="handleResponse(true)">Yes</button>
-            <button class="btn" onclick="handleResponse(false)">No</button>
-          </div>
-        </div>
-      </div>
-      <button class="btn" type="button" id="subtract-button"  onclick="openModal()">Subtract</button>
+
+      <button type="button" id="subtract-button" >Subtract</button>
 
 
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
@@ -309,23 +271,6 @@ input[id="input-points"]:focus {
   const urlParams = new URLSearchParams(window.location.search);
   var currentPoints = 0; // Initialize currentPoints
   const idValue = urlParams.get("id");
-  
-  function openModal() {
-      document.getElementById('modalOverlay').style.display = 'flex';
-  }
-
-  function handleResponse(isYes) {
-    if (isYes) {
-        alert('You clicked Yes!');
-        // Add your "Yes" logic here
-      } else {
-        alert('You clicked No!');
-        // Add your "No" logic here
-      }
-
-      // Close the modal after handling the response
-      document.getElementById('modalOverlay').style.display = 'none';
-  }
 
 
   // Function to get and display points
@@ -414,9 +359,6 @@ input[id="input-points"]:focus {
     progressbar.style.setProperty('--bar-gradient-end', gradient.end);
   }
   
-
-
-
   // Initial load of points using the extracted id
   if (idValue) {
       getPoints(idValue);
