--- a/index.html
+++ b/index.html
@@ -220,7 +220,49 @@ input[id="input-points"]:focus {
   .button:active {
       top: 1px;
 
+  .modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 50%;
+    max-width: 400px;
+    background-color: #f1f1f1;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
 
+  .modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+
+  .button-container button {
+    background-color: #f1f1f1;
+    color: #333;
+    border: 1px solid #ccc;
+    padding: 10px 20px;
+    border-radius: 4em;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s;
+  }
+
+  .button-container button:hover {
+    background-color: lightblue;
+  }
+    
 </style>
 </head>
 <body>
@@ -240,6 +282,17 @@ input[id="input-points"]:focus {
         <input id="input-points" name="quantity" min="1" max="10000">
       </div>
       <button class="button" type="button" id="subtract-button">Subtract</button>
+
+      <!-- Modal -->
+      <div class="modal" id="myModal">
+        <div class="modal-content">
+          <p>Do you want to proceed?</p>
+          <div class="button-container">
+            <button class="button" id="yesButton">Yes</button>
+            <button class="button" id="noButton" style="background-color: lightblue; color: #333;">No</button>
+          </div>
+        </div>
+      </div>
   </div>
   <footer style="text-align: center; padding: 20px 0; background-color: linear-gradient(to right, #83a4d4, #b6fbff);">
     <a href="https://www.facebook.com" target="_blank" style="margin: 0 10px; color: #4373b9;"><i class="fab fa-facebook-f"></i></a>
@@ -344,7 +397,30 @@ input[id="input-points"]:focus {
     progressbar.style.setProperty('--bar-gradient-end', gradient.end);
   }
   
+    var modal = document.getElementById("myModal");
+    var btn = document.getElementById("subtract-button");
+    var yesButton = document.getElementById("yesButton");
+    var noButton = document.getElementById("noButton");
 
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+
+    yesButton.onclick = function() {
+      alert("Yes is pressed");
+      modal.style.display = "none";
+    }
+
+    noButton.onclick = function() {
+      alert("No is pressed");
+      modal.style.display = "none";
+    }
 
 
   // Initial load of points using the extracted id
