--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@ input[id="input-points"]:focus {
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    top: 50%;
+    left: 50%;
 }
 
 .modal-content {
@@ -246,6 +248,7 @@ input[id="input-points"]:focus {
 
 .yes-button, .no-button {
     padding: 10px 20px;
+    border: 1px solid #888;
     color: white;
     border: none;
     cursor: pointer;
