--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ input[id="input-points"]:focus {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
+    /* background-color: rgba(0, 0, 0, 0.4); */
     top: 50%;
 }
 
@@ -272,7 +272,7 @@ input[id="input-points"]:focus {
       <img src="logo.png" alt="Task Force Event Logistique Logo">
     </a>
   </header>
-  <div class="flex-container">
+  <div id="main-container" class="flex-container">
       <div class="flex-container" style="padding-bottom: 56px;">
         <div id="progressbar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="--value: 0; --secondary: #adf; --progress-value: 1000;"></div>
       </div>
@@ -402,6 +402,7 @@ input[id="input-points"]:focus {
 
     document.getElementById('subtract-button').onclick = function() {
         document.getElementById('modal').style.display = 'block';
+        document.getElementById('main-container').style.background = rgba(0, 0, 0, 0.4);
     }
 
     document.querySelector('.yes-button').onclick = function() {
