--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ input[id="input-points"]:focus {
     height: 100%;
     overflow: auto;
     /* background-color: rgba(0, 0, 0, 0.4); */
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
     top: 50%;
 }
 
@@ -248,6 +249,7 @@ input[id="input-points"]:focus {
 .yes-button, .no-button {
     padding: 10px 20px;
     border: 1px solid #888;
+    border-radius: 15px;
     color: white;
     border: none;
     cursor: pointer;
