--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ input[id="input-points"]:focus {
   var currentPoints = 0; // Initialize currentPoints
   var startingPoints = 0;
   const idValue = urlParams.get("id");
-  const apiKey = "";
+  const apiKey = urlParams.get("API_KEY");
   
   
 
