--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ input[id="input-points"]:focus {
                 progressbar.style.setProperty('--value', '0');
                 getPoints(idValue);
                 var inputElement = document.getElementById("input-points");
-                var inputValue = inputElement.value;
+                inputElement.value = "";
               }
               else {
                 alert("You are not authorized for the request or something went wrong.");
