--- a/index.html
+++ b/index.html
@@ -308,7 +308,9 @@ input[id="input-points"]:focus {
   const idValue = urlParams.get("id");
   const apiKey = urlParams.get("API_KEY");
   
-  
+  if !(apiKey) {
+    window.location.replace('https://milankacar.github.io/points-check/?' + idValue);
+  }
 
   // Function to get and display points
   function getPoints(id) {
